force-app/main/default/objects/Evidence_Item__c/Evidence_Item__c.object-meta.xml
<CustomObject>
    <description>A piece of evidence (document, system snapshot, or other artifact) collected during an audit case. Links a content document to an audit case with metadata about document type, integrity hash, and collection status.</description>
    <label>Evidence Item</label>
    <nameField>
        <displayFormat>EI-{0000}</displayFormat>
        <label>Evidence Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evidence Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>