force-app/main/default/objects/Evidence_Item__c/fields/ContentDocument_Id__c.field-meta.xml
<CustomField>
    <fullName>ContentDocument_Id__c</fullName>
    <description>The 18-character Salesforce ID of the linked ContentDocument.</description>
    <inlineHelpText>Salesforce ContentDocument ID for the uploaded file.</inlineHelpText>
    <label>ContentDocument Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>