force-app/main/default/objects/Evidence_Item__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Auditor notes about this evidence item</description>
</CustomField>