force-app/main/default/objects/Evidence_Item__c/fields/Received_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Received_Timestamp__c</fullName>
    <description>When this evidence item was received or captured.</description>
    <inlineHelpText>The date and time this evidence was received.</inlineHelpText>
    <label>Received Timestamp</label>
    <type>DateTime</type>
</CustomField>