force-app/main/default/objects/Evidence_Item__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this evidence item is required for audit completion.</description>
    <inlineHelpText>Check if this evidence is required to complete the audit.</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>