force-app/main/default/objects/Evidence_Item__c/fields/SHA256_Hash__c.field-meta.xml
<CustomField>
    <fullName>SHA256_Hash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>SHA-256 hash of the document content for tamper detection and deduplication.</description>
    <externalId>true</externalId>
    <inlineHelpText>The SHA-256 hash of this document. Used for integrity verification.</inlineHelpText>
    <label>SHA256 Hash</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>