force-app/main/default/objects/Evidence_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Evidence status</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Linked</fullName><default>true</default><label>Linked</label></value>
            <value><fullName>Missing</fullName><default>false</default><label>Missing</label></value>
            <value><fullName>Unverifiable</fullName><default>false</default><label>Unverifiable</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>